Overflow-x fixing2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@ body {
 }
 
 .main_wrap {
-  overflow-x: hidden;
+  overflow: hidden;
+  position: fixed;
 }
 
 .container {
